--- a/direct-deal-chatting-service/build.gradle
+++ b/direct-deal-chatting-service/build.gradle
@@ -9,6 +9,12 @@ bootJar {
 	version = '0.1'
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 	implementation project(':direct-deal-common')
 
@@ -19,7 +25,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:2.0.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all'
 
 	runtimeOnly 'mysql:mysql-connector-java'
 
@@ -29,8 +35,4 @@ dependencies {
 	testImplementation 'org.mockito:mockito-inline'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-}
-
-test {
-	useJUnitPlatform()
 }
