--- a/direct-deal-sale-service/build.gradle
+++ b/direct-deal-sale-service/build.gradle
@@ -9,11 +9,17 @@ bootJar {
 	version = '0.1'
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 	implementation project(':direct-deal-common')
 
-	implementation 'commons-io:commons-io:2.9.0'
-	implementation 'commons-fileupload:commons-fileupload:1.4'
+	implementation 'commons-io:commons-io'
+	implementation 'commons-fileupload:commons-fileupload'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -22,17 +28,17 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:2.0.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all'
 
-	implementation ('org.axonframework:axon-spring-boot-starter:4.5') {
+	implementation ('org.axonframework:axon-spring-boot-starter') {
 		exclude group: "org.axonframework", module: 'axon-server-connector'
 	}
-	implementation 'org.axonframework:axon-micrometer:4.5'
-	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.0-RC3'
-	implementation 'org.apache.kafka:kafka-clients:2.8.0'
+	implementation 'org.axonframework:axon-micrometer'
+	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter'
+	implementation 'org.apache.kafka:kafka-clients'
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.0'
-	implementation group: 'org.axonframework.extensions.mongo', name: 'axon-mongo', version: '4.4'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.axonframework.extensions.mongo:axon-mongo'
 
 	runtimeOnly 'mysql:mysql-connector-java'
 
@@ -44,6 +50,3 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
-test {
-	useJUnitPlatform()
-}
