--- a/deployment/kubernetes/direct-deal-gateway-service.yml
+++ b/deployment/kubernetes/direct-deal-gateway-service.yml
@@ -48,18 +48,18 @@ spec:
         #     limits:
         #       memory: '256Mi'
         #       # cpu: '100m'
-        # livenessProbe:
-        #   httpGet:
-        #     path: /actuator/health
-        #     port: 8084
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 20
-        #   failureThreshold: 20
-        # readinessProbe:
-        #   httpGet:
-        #     path: /actuator/health
-        #     port: 8084
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 20
-        #   failureThreshold: 20
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8084
+          initialDelaySeconds: 120
+          periodSeconds: 20
+          failureThreshold: 10
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8084
+          initialDelaySeconds: 120
+          periodSeconds: 20
+          failureThreshold: 10
 ---
