--- a/deployment/kubernetes/direct-deal-sale-catalog-service.yml
+++ b/deployment/kubernetes/direct-deal-sale-catalog-service.yml
@@ -68,18 +68,18 @@ spec:
         #     limits:
         #       memory: '512Mi'
         #       # cpu: '100m'
-        # livenessProbe:
-        #   httpGet:
-        #     path: /actuator/health
-        #     port: 8082
-        #   initialDelaySeconds: 60
-        #   periodSeconds: 20
-        #   failureThreshold: 20
-        # readinessProbe:
-        #   httpGet:
-        #     path: /actuator/health
-        #     port: 8082
-        #   initialDelaySeconds: 60
-        #   periodSeconds: 20
-        #   failureThreshold: 20
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8082
+          initialDelaySeconds: 120
+          periodSeconds: 20
+          failureThreshold: 10
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8082
+          initialDelaySeconds: 120
+          periodSeconds: 20
+          failureThreshold: 10
 ---
