implemented the webflux version for sale-catalog-service

--- a/deployment/kubernetes/configmap/direct-deal-chatting-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-chatting-configmap.yml
@@ -32,7 +32,7 @@ data:
 
     # Log Settings
     spring.output.ansi.enabled=always
-    logging.level.kr.co.directdeal.accountservice=DEBUG
+    logging.level.kr.co.directdeal.chattingservice=DEBUG
     logging.level.org.hibernate.SQL=DEBUG
     logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
