--- a/deployment/kubernetes/configmap/direct-deal-sale-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-sale-configmap.yml
@@ -54,7 +54,7 @@ data:
 
     # Log Settings
     spring.output.ansi.enabled=always
-    logging.level.kr.co.directdeal.accountservice=DEBUG
+    logging.level.kr.co.directdeal.saleservice=DEBUG
     logging.level.org.hibernate.SQL=DEBUG
     logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
