--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,8 @@ rootProject.name = 'direct-deal'
 include 'direct-deal-common'
 include 'direct-deal-account-service'
 include 'direct-deal-sale-service'
-include 'direct-deal-sale-catalog-service'
+// include 'direct-deal-sale-catalog-service'
+include 'direct-deal-sale-catalog-service-webflux'
 include 'direct-deal-transaction-history-service'
 include 'direct-deal-chatting-service'
+
