bijwerkte de gradle instellingen van direct-deal-gateway service

--- a/direct-deal-sale-catalog-service-webflux/build.gradle
+++ b/direct-deal-sale-catalog-service-webflux/build.gradle
@@ -15,9 +15,9 @@ dependencyManagement {
 	}
 }
 
-configurations.all {
-    transitive = false
-}
+// configurations.all {
+//     transitive = false
+// }
 
 dependencies {
 	implementation project(':direct-deal-common')
