--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=direct-deal-sale-service
 
 spring.cloud.kubernetes.discovery.enabled=false
 spring.cloud.kubernetes.config.enabled=true
+
+logging.file.path=/
