-Exclude com.thoughtworks.xstream:xstream van org.slf4j:slf4j-api en voeg versie 1.4.16 expliciet toe
- Sluit de transitive dependency xstream uit org.slf4j:slf4j-api uit om conflicten te voorkomen.
- Voeg de xstream versie 1.4.16 expliciet toe als directe afhankelijkheid.
- Zorgt voor consistente en verwachte versie van xstream in het project.
 Versterkt beveiliging tegen ongeoorloofde deserialisatie en mogelijke kwetsbaarheden
- Zorg ervoor dat serializer-configuraties worden aangepast aan deze nieuwe standaard

--- a/direct-deal-sale-catalog-service/build.gradle
+++ b/direct-deal-sale-catalog-service/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 	implementation ('org.axonframework:axon-spring-boot-starter') {
 		exclude group: "org.axonframework", module: 'axon-server-connector'
 	}
+	
+	implementation ('org.slf4j:slf4j-api') {
+        exclude group: 'com.thoughtworks.xstream', module: 'xstream'
+	}
+	implementation 'com.thoughtworks.xstream:xstream:1.4.16'
+	
 	implementation 'org.axonframework:axon-micrometer'
 	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter'
 	implementation 'org.apache.kafka:kafka-clients'
