--- a/buildSrc/src/main/groovy/kr.co.directdeal.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/kr.co.directdeal.java-common-conventions.gradle
@@ -31,6 +31,15 @@ allprojects {
 
 sourceCompatibility = '11'
 
+/*configurations.all {
+    exclude group: 'com.thoughtworks.xstream', module: 'xstream'
+
+    resolutionStrategy {
+        force 'com.thoughtworks.xstream:xstream:1.4.16'
+    }
+}*/
+
+
 dependencies {
     constraints {
         // Define dependency versions as constraints
@@ -49,8 +58,15 @@ dependencies {
         
         implementation 'org.axonframework:axon-spring-boot-starter:4.5'
         implementation 'org.axonframework:axon-micrometer:4.5'
-        implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.0-RC3'
+        implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.5'
         implementation 'org.axonframework.extensions.mongo:axon-mongo:4.4'
+        //implementation 'com.thoughtworks.xstream:xstream:1.4.17'
+        implementation("com.thoughtworks.xstream:xstream") {
+            version {
+                strictly "1.4.17"
+            }
+        }
+        
         implementation 'org.apache.kafka:kafka-clients:2.8.0'
         implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.5.0'
 
