--- a/direct-deal-sale-catalog-service-webflux/build.gradle
+++ b/direct-deal-sale-catalog-service-webflux/build.gradle
@@ -32,16 +32,13 @@ dependencies {
 	implementation ('org.axonframework:axon-spring-boot-starter') {
 		exclude group: "org.axonframework", module: 'axon-server-connector'
 	}
-	
-    implementation ('org.slf4j:slf4j-api') {
-        exclude group: 'com.thoughtworks.xstream', module: 'xstream'
-	}
-	implementation 'com.thoughtworks.xstream:xstream:1.4.16'
 
 	implementation 'org.axonframework:axon-micrometer'
 	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter'
 	implementation 'org.apache.kafka:kafka-clients'
-    implementation 'com.thoughtworks.xstream:xstream:1.4.16'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.axonframework.extensions.mongo:axon-mongo'
 
 	compileOnly 'io.jsonwebtoken:jjwt-api'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl'
