--- a/deployment/kubernetes/configmap/direct-deal-sale-catalog-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-sale-catalog-configmap.yml
@@ -28,20 +28,24 @@ data:
     axon.kafka.default-topic=local.event
     axon.kafka.properties.security.protocol=PLAINTEXT
 
-    axon.kafka.fetcher.poll-timeout=3000
+    #axon.kafka.fetcher.poll-timeout=3000
+    axon.kafka.fetcher.enabled = true
 
-    axon.kafka.consumer.enable-auto-commit=true
-    axon.kafka.consumer.auto-commit-interval=3000
+    #axon.kafka.consumer.group-id=sale-catalog-service
+    #enable.auto.commit cannot be set to true when default group id (null) is used
+    axon.kafka.consumer.enable-auto-commit=false
+    #axon.kafka.consumer.auto-commit-interval=3000
     axon.kafka.consumer.event-processor-mode=tracking
+    #axon.kafka.consumer.auto-offset-reset=earliest
 
     axon.eventhandling.processors.saleItem.source=streamableKafkaMessageSource
     axon.eventhandling.processors.saleItem.mode=TRACKING
-    axon.eventhandling.processors.saleItem.thread-count=1
-    axon.eventhandling.processors.saleItem.batch-size=1
+    #axon.eventhandling.processors.saleItem.thread-count=1
+    #axon.eventhandling.processors.saleItem.batch-size=1
 
-    axon.serializer.general=xstream
-    axon.serializer.events=xstream
-    axon.serializer.messages=xstream
+    #axon.serializer.general=xstream
+    #axon.serializer.events=xstream
+    #axon.serializer.messages=xstream
 
     # JPA Settings
     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -71,9 +75,11 @@ data:
 
     # Log Settings
     spring.output.ansi.enabled=always
-    logging.level.kr.co.directdeal.sale.catalogservice=DEBUG
-    logging.level.org.hibernate.SQL=DEBUG
-    logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+    logging.level.kr.co.directdeal.sale.catalogservice=IFNO
+    logging.level.org.hibernate.SQL=INFO
+    logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+    logging.level.org.axonframework.kafka=INFO
+    logging.level.org.apache.kafka=INFO
 
     # Actuator Settings
     management.endpoints.enabled-by-default=false
