--- a/direct-deal-transaction-history-service/build.gradle
+++ b/direct-deal-transaction-history-service/build.gradle
@@ -31,14 +31,12 @@ dependencies {
 		exclude group: "org.axonframework", module: 'axon-server-connector'
 	}
 	
-	implementation ('org.slf4j:slf4j-api') {
-        exclude group: 'com.thoughtworks.xstream', module: 'xstream'
-	}
-	implementation 'com.thoughtworks.xstream:xstream:1.4.16'
-	
 	implementation 'org.axonframework:axon-micrometer'
 	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter'
 	implementation 'org.apache.kafka:kafka-clients'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.axonframework.extensions.mongo:axon-mongo'
 
 	runtimeOnly 'mysql:mysql-connector-java'
 
