--- a/deployment/kubernetes/configmap/direct-deal-sale-catalog-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-sale-catalog-configmap.yml
@@ -1,12 +1,12 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: direct-deal-sale-catalog-service-webflux
+  name: direct-deal-sale-catalog-service
 data:
   application.properties: |
     ---
     server.port=8082
-    spring.application.name=direct-deal-sale-catalog-service-webflux
+    spring.application.name=direct-deal-sale-catalog-service
 
     # JWT Settings
     jwt.header=Authorization
@@ -70,15 +70,14 @@ data:
     spring.data.mongodb.database=SALE_CATALOG_SERVICE_DB
 
     # Redis Settings
-    # spring.redis.host=redis
-    # spring.redis.port=6379
+    spring.redis.host=redis
+    spring.redis.port=6379
 
     # Log Settings
     spring.output.ansi.enabled=always
-    logging.level.kr.co.directdeal.sale.catalogservice=DEBUG
+    logging.level.kr.co.directdeal.sale.catalogservice=IFNO
     logging.level.org.hibernate.SQL=INFO
     logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
-    logging.level.org.axonframework.eventhandling=INFO
     logging.level.org.axonframework.kafka=INFO
     logging.level.org.apache.kafka=INFO
 
