feat: Implement Automated CI/CD Pipeline with Cloud Build and GKE
This commit establishes an automated CI/CD pipeline for our microservice
architecture, utilizing Google Cloud Build and Google Kubernetes Engine
(GKE).

Changes:

- Created a `cloudbuild.yaml` script to orchestrate the build and
deployment process.
- The script builds Docker images for each microservice and any necessary
supporting dependencies.
- The Docker images are automatically deployed to a GKE cluster, ensuring
consistent and repeatable builds.
- This implementation facilitates continuous integration by automating
the entire process, from code changes to production deployment.

--- a/deployment/kubernetes/direct-deal-chatting-service.yml
+++ b/deployment/kubernetes/direct-deal-chatting-service.yml
@@ -53,11 +53,13 @@ spec:
             done
       containers:
       - name: chatting-service
-        image: localhost:5000/direct-deal-chatting-service:latest
+        image: gcr.io/${PROJECT_ID}/direct-deal-chatting-service:latest
         imagePullPolicy: Always
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: "dev"
+        - name: PROJECT_ID
+          value: "${PROJECT_ID}"
         ports:
         - containerPort: 8085
           name: httpport
