--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,12 +9,15 @@ steps:
       ./gradlew clean build
       ./gradlew clean build -p direct-deal-gateway
 
-# 2. 2. Docker image build and tag (each service in multiple steps)
+# 2. Docker image build and tag (each service in multiple steps)
+
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-account-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-account-service', './direct-deal-account-service'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-account-service',
+      '-f', 'direct-deal-account-service/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-account-service'
@@ -27,7 +30,9 @@ steps:
   id: 'docker-build-sale-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-service', './direct-deal-sale-service'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-service',
+      '-f', 'direct-deal-sale-service/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-sale-service'
@@ -40,7 +45,9 @@ steps:
   id: 'docker-build-sale-catalog-service-webflux'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux', './direct-deal-sale-catalog-service-webflux'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux',
+      '-f', 'direct-deal-sale-catalog-service-webflux/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-sale-catalog-service-webflux'
@@ -53,7 +60,9 @@ steps:
   id: 'docker-build-transaction-history-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service', './direct-deal-transaction-history-service'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service',
+      '-f', 'direct-deal-transaction-history-service/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-transaction-history-service'
@@ -66,7 +75,9 @@ steps:
   id: 'docker-build-chatting-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service', './direct-deal-chatting-service'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service',
+      '-f', 'direct-deal-chatting-service/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-chatting-service'
@@ -79,7 +90,9 @@ steps:
   id: 'docker-build-gateway'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-gateway', './direct-deal-gateway'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-gateway',
+      '-f', 'direct-deal-gateway/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-gateway'
@@ -92,7 +105,9 @@ steps:
   id: 'docker-build-mysql'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-mysql', './mysql'
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/direct-deal-mysql',
+      '-f', 'mysql/Dockerfile'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-tag-mysql'
