--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -139,13 +139,84 @@ steps:
       'push', 'gcr.io/$PROJECT_ID/direct-deal-mysql'
     ]
 
-# 4. Deploy to Kubernetes cluster by applying manifests
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'bash'
+# 4. Deploy to Cloud Run for each service
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-account-service'
   args:
-    - '-c'
-    - |
-      kubectl apply -f ./deployment/kubernetes/
+    [
+      'run', 'deploy', 'direct-deal-account-service',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-account-service',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-sale-service'
+  args:
+    [
+      'run', 'deploy', 'direct-deal-sale-service',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-sale-service',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-sale-catalog-service-webflux'
+  args:
+    [
+      'run', 'deploy', 'direct-deal-sale-catalog-service-webflux',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-transaction-history-service'
+  args:
+    [
+      'run', 'deploy', 'direct-deal-transaction-history-service',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-chatting-service'
+  args:
+    [
+      'run', 'deploy', 'direct-deal-chatting-service',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-gateway'
+  args:
+    [
+      'run', 'deploy', 'direct-deal-gateway',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-gateway',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'cloud-run-deploy-mysql'
+  args:
+    [
+      'run', 'deploy', 'direct-deal-mysql',
+      '--image', 'gcr.io/$PROJECT_ID/direct-deal-mysql',
+      '--region', 'europe-west4',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
+
 
 timeout: '1200s'  # Maximum build timeout set to 30 minutes
 
